--- a/1principal.html
+++ b/1principal.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Filmes Premiados</title>
-        <meta charset="UTF-8">
-        <head>
-            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="styles.css">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-        </head>
-        
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-         <link rel="stylesheet" href="styles.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Filmes</title>
+    <link rel="stylesheet" href="styless.css">
+</head>
+<body>
     
+</body>
 </html>
