--- a/1principal.html
+++ b/1principal.html
@@ -3,10 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filmes</title>
-    <link rel="stylesheet" href="styless.css">
+    <title>Filmes Premiados</title>
+    <link rel="stylesheet" href="1styles.css">
 </head>
-<body>
-    
+<body class="Fundo">
+    <div class="Titulo">
+        <h1>Filmes Premiados</h1>
+    </div>
+    <div class="container">
+        <section>
+            <a href="A Viagem de Chihiro.html"><img class="filme" src="./IMG/A Viagem de Chihiro.jpg" alt="A Viagem de Chihiro"></a>
+            <figcaption class="subtitulos">A Viagem de Chihiro</figcaption>
+        </section>
+        <section>
+            <a href="O Menino e a Garça.html"><img class="filme" src="./IMG/O Menino e a Garça.jpg" alt="O Menino e a Garça"></a>
+            <figcaption class="subtitulos">O Menino e a Garça</figcaption>
+        </section>
+        <section>
+            <a href="Toy Story 3.html"><img class="filme" src="./IMG/Toystory3.webp" alt="Toystory3"></a>
+            <figcaption class="subtitulos">Toystory3</figcaption>
+        </section>
+        <section>
+            <a href="Procurando Nemo.html"><img class="filme" src="./IMG/Procurando Nemo.webp" alt="Procurando Nemo"></a>
+            <figcaption class="subtitulos">Procurando Nemo</figcaption>
+        </section>
+        <section>
+            <a href="Wall-E.html"><img class="filme" src="./IMG/Wall-E.webp" alt="Wall-E"></a>
+            <figcaption class="subtitulos">Wall-E</figcaption>
+        </section>
+        <section>
+            <a href="Ratatouille.html"><img class="filme" src="./IMG/Ratatouille.jpg" alt="Ratatouille"></a>
+            <figcaption class="subtitulos">Ratatouille</figcaption>
+            <section>
+                <a href="Os incriveis.html"><img class="filme" src="./IMG/Os Incríveis.webp" alt="Os incriveis"></a>
+                <figcaption class="subtitulos">Os incriveis</figcaption>
+            </section>
+        </section>
+
+
+    </div>
 </body>
 </html>
